remove the letter spacing bug

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -89,7 +89,7 @@ body {
   display: block;
   font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 1.75px;
+  letter-spacing: 1.75rem;
   animation: moveInRight 1s ease-out;
 }
 
